@@ -6,6 +6,7 @@
 ================
 * upgraded to AspectJ 1.6.11, OGNL 3.0.2, JRuby 1.6.2, Groovy 1.8.0
 + added caching of compiled OGNL expressions
+- fixed message attribute on JSR303 annotations being ignored
 
 2011-04-05 v1.70
 ================
